# ohtupalautus

./: .gitignore  README.md  tagtest.txt
viikko1/nhl-statistics/: .coverage
viikko1/nhl-statistics/src/: index.py  statistics_service.py
viikko1/nhl-statistics/src/tests/: statisticsservice_test.py
viikko1/riippuvuuksien-injektointi/src/tests/: laskin_test.py
viikko2/git-branch-harjoitus/: index.py
viikko2/nhl-reader/: .pylintrc
viikko2/nhl-reader/src/: nhl_reader.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko3/: retro.md
viikko3/login/src/services/: user_service.py
viikko3/login/src/tests/: home.robot  login.robot  register.robot  resource.robot
viikko3/webcounter/: README.md
viikko4/maksukortti-mock/src/: kassapaate.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/mock-demo/tests/: kauppa_test.py
viikko4/verkkokauppa/: .coveragerc
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/: review.md  vibe.md
viikko5/tennis/src/: tennis_game.py
viikko6/laskin/src/: kayttoliittyma.py  komennot.py
viikko6/query-language/src/: index.py  matchers.py  querybuilder.py
viikko7/: agent.md
viikko7/kivi-paperi-sakset/: pyproject.toml
viikko7/kivi-paperi-sakset-original/src/: kivi_paperi_sakset.py  kps_tekoaly.py
viikko7/kivi-paperi-sakset/src/: index.py  kivi_paperi_sakset.py  kps_parempi_tekoaly.py  pelitehdas.py  tekoaly.py  tuomari.py  web_app.py
viikko7/kivi-paperi-sakset/src/templates/: base.html  index.html
viikko7/kivi-paperi-sakset/tests/: conftest.py  test_core_logic.py  test_web_app.py
